// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`script transform > computed 1`] = `
"export default {
  
  data() {
    return {
      nickname: 'nickname'
    };
  },
  computed: {
    name() {
      return this.nickname;
    },
    age() {
      return 18;
    }
  }
,
  created() {




}}"
`;

exports[`script transform > cssVars 1`] = `
"export default {
  
  data() {
    return {
      a: '1px',
      b: 2
    };
  }
,
  created() {



}}"
`;

exports[`script transform > imports 1`] = `
"import img from './img.webp';
import Component from './Component.vue';
import { Checkbox } from 'ant-design-vue';

export default {
  created() {

}}"
`;

exports[`script transform > life cycles hooks 1`] = `
"export default {
  
  data() {
    return {
      a: {
        c: 1
      }
    };
  },
  mounted() {
    this.a.c = 2;
  },
  destroyed() {
    this.a.c = 3;
  }
,
  created() {





}}"
`;

exports[`script transform > macros 1`] = `
"export default {
  ...{
    name: 'Component',
    inheritAttrs: false,
},
  props: {
    a: { type: Number, required: false }
  },
  created() {





}}"
`;

exports[`script transform > methods 1`] = `
"export default {
  
  data() {
    return {
      nickname: 'nickname'
    };
  },
  computed: {
    name() {
      return this.nickname;
    },
    age() {
      return 18;
    }
  },
  methods: {
    changeName() {
      this.nickname = 'new nickname';
    },
    changeAge() {
      this.age = 20;
    }
  }
,
  created() {








}}"
`;

exports[`script transform > ref 1`] = `
"export default {
  
  data() {
    return {
      nickname: 'nickname',
      avatar: {
        img: 'avatar.png'
      },
      visible: false,
      data: {
        a: 1
      },
      a: {
        a: 1
      }
    };
  }
,
  created() {






let b = 1

this.avatar.img = 'new avatar.png'
}}"
`;

exports[`script transform > watch 1`] = `
"export default {
  
  data() {
    return {
      nickname: 'nickname',
      info: {
        a: 1
      }
    };
  },
  computed: {
    name() {
      return this.nickname;
    },
    age() {
      return this.info.a;
    }
  },
  watch: {
    nickname: {
      handler() {
        console.log('a changed');
        this.info.a++;
      },
      immediate: true,
      deep: true
    },
    \\"info.a\\": {
      handler() {
        console.log('a changed');
        this.info.a++;
      },
      immediate: true,
      deep: true
    },
    age: {
      handler() {
        console.log('a changed');
        this.info.a++;
      },
      immediate: true,
      deep: true
    }
  }
,
  created() {













}}"
`;
